Fix long links causing horizontal scrolling on small screens

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -916,6 +916,7 @@ is the very first element in the post content */
 .gh-content a {
     color: var(--ghost-accent-color);
     text-decoration: underline;
+    word-break: break-word;
 }
 
 .gh-content > blockquote,
